// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@bottom-tab-navigator: component checks * additional appearance 1`] = `
<View
  appearance="highlight"
  dispatch={[Function]}
  selectedIndex={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={3}
    selectedPosition={0}
    style={
      Object {
        "0": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "1": Object {
          "position": "absolute",
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "33.333333333333336%",
      }
    }
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#3366FF",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#3366FF",
          "fontWeight": "600",
        }
      }
    >
      Screen 1
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/attachment.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 2
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="@tab/last"
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/announcements.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 3
    </Text>
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * choose selected tab 1`] = `
<View
  appearance="default"
  dispatch={[Function]}
  onSelect={[MockFunction]}
  selectedIndex={1}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={3}
    selectedPosition={1}
    style={
      Object {
        "0": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "1": Object {
          "position": "absolute",
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "33.333333333333336%",
      }
    }
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 1
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="@tab/last"
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/attachment.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#3366FF",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#3366FF",
          "fontWeight": "600",
        }
      }
    >
      Screen 2
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/announcements.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 3
    </Text>
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * current index 1`] = `
<View
  appearance="default"
  dispatch={[Function]}
  selectedIndex={1}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={3}
    selectedPosition={1}
    style={
      Object {
        "0": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "1": Object {
          "position": "absolute",
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "33.333333333333336%",
      }
    }
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 1
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/attachment.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#3366FF",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#3366FF",
          "fontWeight": "600",
        }
      }
    >
      Screen 2
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/announcements.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 3
    </Text>
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * empty 1`] = `
<View
  appearance="default"
  dispatch={[Function]}
  selectedIndex={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={0}
    selectedPosition={0}
    style={
      Object {
        "0": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "1": Object {
          "position": "absolute",
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "Infinity%",
      }
    }
  />
</View>
`;

exports[`@bottom-tab-navigator: component checks * tab choose 1`] = `
<View
  appearance="default"
  dispatch={[Function]}
  onSelect={
    [MockFunction] {
      "calls": Array [
        Array [
          2,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  selectedIndex={1}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={3}
    selectedPosition={1}
    style={
      Object {
        "0": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "1": Object {
          "position": "absolute",
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "33.333333333333336%",
      }
    }
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 1
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/attachment.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#3366FF",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#3366FF",
          "fontWeight": "600",
        }
      }
    >
      Screen 2
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="@tab/last"
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/announcements.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 3
    </Text>
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * with routes 1`] = `
<View
  appearance="default"
  dispatch={[Function]}
  selectedIndex={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={3}
    selectedPosition={0}
    style={
      Object {
        "0": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "1": Object {
          "position": "absolute",
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "33.333333333333336%",
      }
    }
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#3366FF",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#3366FF",
          "fontWeight": "600",
        }
      }
    >
      Screen 1
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/attachment.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 2
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/announcements.png",
        }
      }
      style={
        Object {
          "height": 40,
          "marginBottom": undefined,
          "tintColor": "#8992A3",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
          "fontWeight": "600",
        }
      }
    >
      Screen 3
    </Text>
  </View>
</View>
`;
